syntax = "proto3";

package protobuf;

option go_package = "example/grpc/internal/controller/rpcg/protobuf";

import "google/protobuf/timestamp.proto";

message Book {
    int64 id = 1;
    string title = 2;
    string description = 3;
    google.protobuf.Timestamp published_at = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message CreateBookRequest {
    string title = 1;
    string description = 2;
    google.protobuf.Timestamp published_at = 3;
}

message UpdateBookRequest {
    int64 id = 1;
    string description = 2;
}

message QueryRequest {
    // int64 limit = 1;
    // int64 offset = 2;
}



service BookService {
    rpc GetBooks (QueryRequest) returns (stream Book) {}
    rpc CreateBook (CreateBookRequest) returns (Book) {}
    rpc UpdateBook (UpdateBookRequest) returns (Book) {}
}
